# zync

./: Design.txt  LICENSE  README.md  TODO.txt
Projects/: .gitignore
Projects/Midnight/: CMakeLists.txt
Projects/Midnight/Code/: Level.h  main.cpp
Projects/Midnight/Devkit/: Debug.h  Graphics.h  Maths.h  Scene.h  System.h  Zync.h
Projects/Midnight/Libraries/soil/: CMakeLists.txt
